# fake-news-detection

./: README.MD  README.md
Fake/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+60 more)
KBase/: .fuse_hidden00000c9e00000027  .fuse_hidden0000115500000080  CMakeLists.txt  Readme.txt
KBase/TestScripts/: capital_state.R  experimentAPI.R  knowledgeGraph.R
KBase/data/: dbpedia.edgelist  dbpedia.edgetypes  dbpedia.nodes
KBase/result/: capital_state_all.test.csv
KBase/src/: edgeTypeLoader.h  edge_list.cpp  edge_list.h  graph.h  knowledgeGraph.cpp  nodeMapLoader.h  parseInput.cpp  relationLoader.h  socket_server.h  tripletParser.cpp  tripletParser.h
KBase/true_data/: state_capital.csv
Real/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+60 more)
SynAndSemantic/: readme.md
resources/: ParseDataSet.java  URL.txt  short_sentence_similarity (copy).html  short_sentence_similarity.py
src/: BinarySearchTree.java  DataSplitter.java  HttpConnect.java  README_SYNTACTIC  main.java  (+1 more)
(+1011 files in other folders)
